@@ -108,6 +108,7 @@ export("+.section",
        makeSection,
        mapArrows,
        mapContour,
+       mapDirectionField,
        mapImage,
        mapLines,
        mapLocator,
