@@ -1,4 +1,5 @@
 0.9-15
+- mapDirectionField() added
 - mapArrows() added
 - read.index() added
 - utm2lonlat() and lonlat2utm() added
